# tindico

./: .gitignore  README.md  pixi.toml  pyproject.toml
src/tindico/: __main__.py  api.py  calendar_sync.py  config.py  models.py  tui.py
