[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tindico"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "textual",
    "icalendar",
    "pyobjc-framework-EventKit",
]

[project.scripts]
tindico = "tindico.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tindico"]
